playground stuff including rest server with prometheus

--- a/gunicorn_app/env/deploymentenv/Dockerfile
+++ b/gunicorn_app/env/deploymentenv/Dockerfile
@@ -1,5 +1,4 @@
 FROM ubuntu:latest
-MAINTAINER Tamas Eros (tamas.eros1@gmail.com)
 
 RUN apt-get update --allow-unauthenticated --fix-missing
 RUN apt-get install -y python3 \
@@ -8,10 +7,7 @@ RUN apt-get install -y python3 \
                        wget
 
 RUN pip install flask
-RUN pip install prometheus_client
 
-ADD erostamas_rest_service.py /usr/bin/
+ADD erostamas_gunicorn_app.py /usr/bin/
 
 WORKDIR /
-
-ENTRYPOINT /usr/bin/erostamas_rest_service.py
